# dtformats

./: .gitignore  .pylintrc  .travis.yml  ACKNOWLEDGEMENTS  AUTHORS  MANIFEST.in  README.md  appveyor.yml  dependencies.ini  dtformats.ini  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  test_docker.yml  test_docs.yml  test_tox.yml
config/appveyor/: install.ps1  install.sh
config/dpkg/: changelog  control  copyright  python-dtformats.install  python3-dtformats.install  rules
config/pylint/: spelling-private-dict
config/travis/: install.sh  run_coverage.sh  run_pylint.sh  runtests.sh
data/: avrf.yaml  core.yaml  cpio.yaml  guid.yaml  job.yaml  lnk.yaml  mdmp.yaml
definitions/: avrf.yaml  core.yaml  guid.yaml  lnk.yaml  mdmp.yaml
documentation/: AMCache file (AMCache.hve) format.asciidoc  Apple Spotlight store database file format.asciidoc  Apple System Log (ASL) file format.asciidoc  Apple Unified Logging and Activity Tracing formats.asciidoc  Apple macOS Spotlight Database format.asciidoc  BSM event auditing file format.asciidoc  Basic Security Module (BSM) event auditing file format.asciidoc  CUPS Internet Printing Protocol (IPP) format.asciidoc  CUPS Internet Printing Protocol format.asciidoc  Chrome Cache file format.asciidoc  Copy in and out (CPIO) archive format.asciidoc  Firefox cache file format.asciidoc  GZIP compressed stream format.asciidoc  IndexedDB database format.asciidoc  Java WebStart IDX file format.asciidoc  Job file format.asciidoc  Jump lists format.asciidoc  LevelDB database format.asciidoc  Mac OS background item bookmark data format.asciidoc  Mac OS login item alias data format.asciidoc  MacOS File System Events Disk Log Stream format.asciidoc  MacOS keychain database file format.asciidoc  Microsoft IIS W3C extended log file format.asciidoc  RecentFileCache.bcf format.asciidoc  Restore point formats.asciidoc  Safari Cookies.asciidoc  SysCache file (SysCache.hve) format.asciidoc  Systemd journal file format.asciidoc  Timezone information file format.asciidoc  Utmp login records format.asciidoc  WMI repository file format.asciidoc  Windows (Enhanced) Metafile Format (WMF and EMF).asciidoc  Windows Defender scan DetectionHistory file format.asciidoc  Windows Recycle.Bin file format.asciidoc  Windows Recycle.Bin file formats.asciidoc  Windows Recycler file formats.asciidoc
dtformats/: __init__.py  alias_data.debug.yaml  alias_data.py  alias_data.yaml  amcache.py  asl.debug.yaml  asl.py  asl.yaml  aul_data_types.yaml  aul_dsc.debug.yaml  aul_dsc.yaml  aul_timesync.debug.yaml  aul_timesync.yaml  aul_tracev3.debug.yaml  aul_tracev3.yaml  aul_uuidtext.debug.yaml  aul_uuidtext.yaml  bookmark_data.debug.yaml  bookmark_data.py  bookmark_data.yaml  bsm.debug.yaml  bsm.py  bsm.yaml  chrome_cache.debug.yaml  chrome_cache.py  chrome_cache.yaml  cpio.py  cpio.yaml  cups_ipp.debug.yaml  cups_ipp.py  cups_ipp.yaml  darwin.py  data_format.py  data_range.py  dependencies.py  detection_history.debug.yaml  detection_history.py  detection_history.yaml  dfvfs_helpers.py  emf.yaml  (+79 more)
scripts/: alias_data.py  amcache.py  analyzer.py  asl.py  bookmark_data.py  bsm.py  chrome_cache.py  cpio.py  cups_ipp.py  decode_nskeyedarchiver_plist.py  detection_history.py  firefox_cache1.py  fseventsd.py  gzip.py  gzip_file.py  gzipfile.py  indexeddb.py  job.py  jump_list.py  keychain.py  leveldb.py  prefetch_hash.py  recycle_bin.py  recycler.py  rp_change_log.py  rp_log.py  safari_cookies.py  spotlight_store.py  spotlight_storedb.py  systemd.py  tracev3.py  tzif.py  unified_logging.py  usn_journal.py  utmp.py  wemf.py  wmi_repository.py
test_data/: Memo.emf  backgrounditems.btm.bookmark_data  change.log.1  com.apple.loginitems.plist.alias_data  definitions.debug.yaml  grid.wmf  indx.records  utmp
test_data/cim/: INDEX.BTR  INDEX.MAP  MAPPING2.MAP  OBJECTS.MAP
test_data/firefox_cache1/: _CACHE_001_  _CACHE_002_  _CACHE_003_
test_data/firefox_cache1/3/3D/: ED165d01
test_data/firefox_cache1/9/36/: DD708d01
test_data/firefox_cache1/E/1B/: DCD2Fd01
test_data/firefox_cache2/entries/: 029FC2EB7DA2609A5A64FF708B05293423C821BE  1A2727E7DE587AC824F5EB4E047D70D13E8FA810  53DAE4B1D7BFF6744CCAF7207DE631267F9883DC  5CDBAD3BE8DA69874B129A1B1781714C890E9AFC  5D1BA4A8101DEFA98770279CFFE3F6D06083C1C7  6C9B846926C287B15F67D64CE91F1CFA7D812660  77F0CB8AF80EBB0328B6F2145232F7E2A8E6FF4E  81203178B9740339077597CBBBD8F3ECCD4B9DCB  8C8B2D388973CB984B099EA9BF56459FDDAD8C17  996FF69B28B46AA08240D5B033726E178EA73F53  BF13DDDC114B55CF8532A4CD90403A99233AEC0E  C1D678C6EA72E24B3992498283CA2643CBE54C2E  E9D2A7E78C4D1678903919452AF70C874A16E85C
test_data/unified_logging/: 0000000000000030.tracev3  0000000000000f85.tracev3
test_data/unified_logging/timesync/: 0000000000000002.timesync
test_data/unified_logging/uuidtext/dsc/: 8E21CAB1DCF936B49F85CF860E6F34EC  dsc-version1
test_data/uuidtext/00/: 7EF56328D53A78B59CCCE3E3189F57
test_data/uuidtext/dsc/: dsc-version2
tests/: alias_data.py  amcache.py  asl.py  bookmark_data.py  bsm.py  chrome_cache.py  cpio.py  cups_ipp.py  data_format.py  data_range.py  dependencies.py  dfvfs_helpers.py  file_system.py  fseventsd.py  gzip.py  gzipfile.py  index_directory_entry.py  indx_directory_entry.py  job.py  jump_list.py  keychain.py  leveldb.py  macos_spotlight_v2.py  output_writer.py  output_writers.py  prefetch.py  py2to3.py  recycle_bin.py  recycler.py  rp_change_log.py  rp_log.py  safari_cookies.py  spotlight_store.py  spotlight_storedb.py  test_lib.py  tzif.py  unified_logging.py  utmp.py  uuidtext.py  wemf.py  (+2 more)
utils/: __init__.py  check_dependencies.py  dependencies.py  update_dependencies.py  update_release.sh  update_version.sh
