[metadata]
name = dtformats
version = 20230506
description = Data formats (dtformats)
long_description = dtFormats is a collection of various file formats.
long_description_content_type = text/plain
url = https://github.com/libyal/dtformats
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  dtformats = dtformats
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_rpm]
release = 1
packager = Joachim Metz <joachim.metz@gmail.com>
doc_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
build_requires = python3-setuptools
requires =
  libfwps-python3 >= 20230131
  libfwsi-python3 >= 20150606
  libgzipf-python3 >= 20221229
  liblnk-python3 >= 20230205
  libolecf-python3 >= 20151223
  libregf-python3 >= 20150315
  python3-dfdatetime >= 20180510
  python3-dtfabric >= 20230518
  python3-lz4 >= 0.10.0
  python3-pyyaml >= 3.10

[bdist_wheel]
universal = 1
