[metadata]
name = dtformats
version = 20241013
description = Data formats (dtformats)
long_description = dtFormats is a collection of various file formats.
long_description_content_type = text/plain
url = https://github.com/libyal/dtformats
maintainer = Joachim Metz
maintainer_email = joachim.metz@gmail.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  dtformats = dtformats
packages = find:
python_requires = >=3.8
scripts =
  scripts/alias_data.py
  scripts/amcache.py
  scripts/analyzer.py
  scripts/asl.py
  scripts/bookmark_data.py
  scripts/bsm.py
  scripts/chrome_cache.py
  scripts/cpio.py
  scripts/cups_ipp.py
  scripts/decode_nskeyedarchiver_plist.py
  scripts/detection_history.py
  scripts/firefox_cache1.py
  scripts/fseventsd.py
  scripts/gzipfile.py
  scripts/indexeddb.py
  scripts/job.py
  scripts/jump_list.py
  scripts/keychain.py
  scripts/leveldb.py
  scripts/prefetch_hash.py
  scripts/recycle_bin.py
  scripts/recycler.py
  scripts/rp_change_log.py
  scripts/rp_log.py
  scripts/safari_cookies.py
  scripts/spotlight_storedb.py
  scripts/systemd.py
  scripts/tzif.py
  scripts/unified_logging.py
  scripts/usn_journal.py
  scripts/utmp.py
  scripts/wemf.py
  scripts/wmi_repository.py

[options.package_data]
dtformats =
  *.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .

[bdist_wheel]
universal = 1
